Quick fix on small style and addition of sui-p-small.

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -81,6 +81,12 @@
 		letter-spacing: $font--letter-spacing;
 		text-rendering: optimizeLegibility;
 
+		&.sui-p-small {
+			font-size: 13px;
+			line-height: 22px;
+			color: $p-small-color;
+		}
+
 		&:first-child {
 			margin-top: 0;
 		}
@@ -99,7 +105,7 @@
 
 	}
 
-	p small {
+	small {
 		font-size: 13px;
 		line-height: 22px;
 		color: $p-small-color;
